gcc/testsuite/rust/rustc/ui/issues/issue-43925_dg.rs
#[link(name = "foo", cfg("rlib"))] // { dg-error "" "" { target *-*-* } }
extern "C" {}

fn main() {}

